# Bookseek

./: CMakeLists.txt  bookseek  readme.md
database/: init_db.sh  schema.sql
include/: database.h  user.h
src/: bookseek  database.cpp  main.cpp  user.cpp
src/helper/: notification.cpp
src/services/: ai-review-recommendation.cpp  book.cpp  users.cpp  wishlist-lend.cpp
